force-app/main/default/objects/Product_Scheme__c/Product_Scheme__c.object-meta.xml
<CustomObject>
    <label>Product Scheme</label>
    <nameField>
        <label>Scheme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Schemes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>