force-app/main/default/objects/Product_Scheme__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Modern Trade</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
                <isActive>false</isActive>
                <label>Dealer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>