force-app/main/default/objects/Product_Scheme__c/fields/Minimum_Eligible_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Eligible_Quantity__c</fullName>
    <label>Minimum Eligible Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>