force-app/main/default/objects/Product_Scheme__c/fields/State_1__c.field-meta.xml
<CustomField>
    <fullName>State_1__c</fullName>
    <label>State</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>